commit melhorias email solicitacao autorizacao